--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
     <meta property="og:title" content="Tactical Master - Elite Football & Talent Management" />
     <meta property="og:description" content="Crafting Global Superstars Through Precision Performance" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="logo.png" />
+    <meta property="og:url" content="https://tactical-red.vercel.app/" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="logo.png" />
+    <meta property="twitter:url" content="https://tactical-red.vercel.app/">
+    <meta name="twitter:title" content="Tactical Master - Elite Football & Talent Management">
+    <meta name="twitter:description" content="Crafting Global Superstars Through Precision Performance">
   </head>
 
   <body>
